<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_tool_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_dialog_fullscreen"
    android:clickable="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_tool"
            android:textSize="44sp"
            android:textColor="#FFFFFF"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
            <TextView
                android:id="@+id/app_calendar"
                android:drawableTop="@drawable/ic_calendar"
                android:text="@string/calendar"
                style="@style/folder_item_style"
                android:layout_marginRight="150dp" />
            <TextView
                android:id="@+id/app_calculator"
                android:drawableTop="@drawable/ic_calculator"
                android:text="@string/calculator"
                style="@style/folder_item_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
            <TextView
                android:id="@+id/app_system_info"
                android:drawableTop="@drawable/ic_system_info"
                android:text="@string/system_info"
                style="@style/folder_item_style"
                android:layout_marginRight="150dp"/>
            <TextView
                android:id="@+id/app_message"
                android:drawableTop="@drawable/ic_message"
                android:text="@string/message"
                style="@style/folder_item_style"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>