<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/online_apps_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_dialog_fullscreen"
    android:clickable="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_apps"
            android:textSize="44sp"
            android:textColor="#FFFFFF"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
            <TextView
                android:id="@+id/app_we_chat"
                android:drawableTop="@drawable/ic_we_chat"
                android:text="@string/we_chat"
                style="@style/folder_item_style"
                android:layout_marginRight="150dp" />
            <TextView
                android:id="@+id/app_himalayan"
                android:drawableTop="@drawable/ic_himalayan"
                android:text="@string/himalayan"
                style="@style/folder_item_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
            <TextView
                android:id="@+id/app_cool_my_music"
                android:drawableTop="@drawable/ic_cool_my_music"
                android:text="@string/cool_my_music"
                style="@style/folder_item_style"
                android:layout_marginRight="150dp"/>
            <TextView
                android:id="@+id/app_qq_browser"
                android:drawableTop="@drawable/ic_qq_browser"
                android:text="@string/qq_browser"
                style="@style/folder_item_style"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>